<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="#71BCFA"
        android:padding="6dip" >

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.12"
            android:text="@string/mobile_services"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ProgressBar
            android:id="@+id/loadingProgressBar"
            android:layout_width="28dp"
            android:layout_height="28dp" />
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" 
        android:background="#71BCFA"
        android:padding="6dip"  >

        <EditText
            android:id="@+id/textNewToDo"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/add_textbox_hint" >

            <requestFocus />
       </EditText>

        <Button
            android:id="@+id/buttonAddToDo"
            android:layout_width="64dip"
            android:layout_height="wrap_content"
            android:onClick="addItem"
            android:text="@string/add_button_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#71BCFA"
        android:padding="6dip"
        android:weightSum="1">

        <Button
            android:id="@+id/buttonShowAllJson"
            android:layout_width="64dip"
            android:layout_height="wrap_content"
            android:onClick="showAllUntyped"
            android:text="@string/showAllUntyped_button_text"
            android:layout_weight="0.14" />

        <Button
            android:id="@+id/buttonShowAll"
            android:layout_width="64dip"
            android:layout_height="wrap_content"
            android:onClick="showAll"
            android:text="@string/showAll_button_text"
            android:layout_weight="0.14" />


        <Button
            android:id="@+id/buttonFilter"
            android:layout_width="64dip"
            android:layout_height="wrap_content"
            android:onClick="filter"
            android:text="@string/filter_button_text"
            android:layout_weight="0.14" />

        <Button
            android:id="@+id/buttonSort"
            android:layout_width="64dip"
            android:layout_height="wrap_content"
            android:onClick="sort"
            android:text="@string/sort_button_text"
            android:layout_weight="0.14" />

        <Button
            android:id="@+id/buttonTop5"
            android:layout_width="64dip"
            android:layout_height="wrap_content"
            android:onClick="showTop5"
            android:text="@string/top5_button_text"
            android:layout_weight="0.14" />

        <Button
            android:id="@+id/buttonSelectCols"
            android:layout_width="64dip"
            android:layout_height="wrap_content"
            android:onClick="selectCols"
            android:text="@string/SelectCols_button_text"
            android:layout_weight="0.14" />

        <Button
            android:id="@+id/buttonConcat"
            android:layout_width="64dip"
            android:layout_height="wrap_content"
            android:onClick="concat"
            android:text="@string/concat_button_text"
            android:layout_weight="0.14" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#71BCFA"
        android:padding="6dip"
        android:weightSum="1">

        <Button
            android:id="@+id/buttonDeleteItem"
            android:layout_width="64dip"
            android:layout_height="wrap_content"
            android:onClick="deleteItem"
            android:text="@string/deleteItem_button_text"
            android:layout_weight="0.14" />

        <Button
            android:id="@+id/buttonLookup"
            android:layout_width="64dip"
            android:layout_height="wrap_content"
            android:onClick="lookup"
            android:text="@string/lookup_button_text"
            android:layout_weight="0.14" />

        <Button
            android:id="@+id/buttonAddUntyped"
            android:layout_width="64dip"
            android:layout_height="wrap_content"
            android:onClick="addUntyped"
            android:text="@string/addUntyped_button_text"
            android:layout_weight="0.14" />

    </LinearLayout>

    <ListView
        android:id="@+id/listViewToDo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/row_list_to_do" 
        android:padding="6dip" >

    </ListView>

</LinearLayout>